--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -51,7 +51,7 @@ jobs:
           
           if [[ -n "${{ inputs.architecture }}" ]]; then
             LAYER_NAME=$LAYER_NAME-${{ inputs.architecture }}
-            ARCH="${{ inputs.architecture }}"
+            ARCH=$(echo "${{ inputs.architecture }}" | sed -r 's/amd64/x86_64/g')
           else
             ARCH="x86_64 arm64"
           fi
@@ -65,6 +65,7 @@ jobs:
           
           LAYER_NAME=$LAYER_NAME-$LAYER_VERSION_CLEANED
           echo "LAYER_NAME=$LAYER_NAME" >> $GITHUB_ENV
+          echo "ARCH=$ARCH" >> $GITHUB_ENV
           
           echo GITHUB_ENV:
           cat $GITHUB_ENV
