--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -66,6 +66,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: ${{ inputs.artifact-name }}
+          path: ${{ inputs.artifact-name }}
 
       - uses: aws-actions/configure-aws-credentials@v2
         with:
