--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -55,6 +55,12 @@ jobs:
           else
             ARCH="x86_64 arm64"
           fi
+          echo "ARCH=$ARCH" >> $GITHUB_ENV
+          
+          if [[ -n "${{ inputs.runtimes }}" ]]; then
+            RUNTIMES="--compatible-runtimes ${{ inputs.runtimes }}"
+          fi
+          echo "RUNTIMES=$RUNTIMES" >> $GITHUB_ENV
           
           if [[ "${{ inputs.release-group }}" != "prod" ]]; then
             LAYER_NAME=$LAYER_NAME-${{ inputs.release-group }}
@@ -65,7 +71,6 @@ jobs:
           
           LAYER_NAME=$LAYER_NAME-$LAYER_VERSION_CLEANED
           echo "LAYER_NAME=$LAYER_NAME" >> $GITHUB_ENV
-          echo "ARCH=$ARCH" >> $GITHUB_ENV
           
           echo GITHUB_ENV:
           cat $GITHUB_ENV
@@ -88,8 +93,7 @@ jobs:
             aws lambda publish-layer-version \
               --layer-name $LAYER_NAME \
               --license-info "Apache 2.0" \
-              --compatible-architectures $ARCH
-              --compatible-runtimes ${{ inputs.runtimes }}
+              --compatible-architectures $ARCH $RUNTIMES \
               --zip-file fileb://${{ inputs.artifact-name }} \
               --query 'LayerVersionArn' \
               --output text
