--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -19,6 +19,10 @@ on:
         description: '(optional) amd64 or arm64'
         required: false
         type: string
+      runtimes:
+        description: '(optional) a space delimited list of compatible runtimes (from https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html)'
+        required: false
+        type: string
       release-group:
         description: 'Release to dev or prod? "prod" yields empty value. (Default: dev)'
         required: true
@@ -47,7 +51,16 @@ jobs:
           
           if [[ -n "${{ inputs.architecture }}" ]]; then
             LAYER_NAME=$LAYER_NAME-${{ inputs.architecture }}
+            ARCH=$(echo "${{ inputs.architecture }}" | sed -r 's/amd64/x86_64/g')
+          else
+            ARCH="x86_64 arm64"
           fi
+          echo "ARCH=$ARCH" >> $GITHUB_ENV
+          
+          if [[ -n "${{ inputs.runtimes }}" ]]; then
+            RUNTIMES="--compatible-runtimes ${{ inputs.runtimes }}"
+          fi
+          echo "RUNTIMES=$RUNTIMES" >> $GITHUB_ENV
           
           if [[ "${{ inputs.release-group }}" != "prod" ]]; then
             LAYER_NAME=$LAYER_NAME-${{ inputs.release-group }}
@@ -80,6 +93,7 @@ jobs:
             aws lambda publish-layer-version \
               --layer-name $LAYER_NAME \
               --license-info "Apache 2.0" \
+              --compatible-architectures $ARCH $RUNTIMES \
               --zip-file fileb://${{ inputs.artifact-name }} \
               --query 'LayerVersionArn' \
               --output text
