Add regions and mark as prod release.

--- a/.github/workflows/release-layer-java.yml
+++ b/.github/workflows/release-layer-java.yml
@@ -50,20 +50,20 @@ jobs:
     strategy:
       matrix:
         aws_region: 
-#          - ap-northeast-1
-#          - ap-northeast-2
-#          - ap-south-1
-#          - ap-southeast-1
-#          - ap-southeast-2
-#          - ca-central-1
-#          - eu-central-1
-#          - eu-north-1
-#          - eu-west-1
-#          - eu-west-2
-#          - eu-west-3
-#          - sa-east-1
-#          - us-east-1
-#          - us-east-2
+          - ap-northeast-1
+          - ap-northeast-2
+          - ap-south-1
+          - ap-southeast-1
+          - ap-southeast-2
+          - ca-central-1
+          - eu-central-1
+          - eu-north-1
+          - eu-west-1
+          - eu-west-2
+          - eu-west-3
+          - sa-east-1
+          - us-east-1
+          - us-east-2
           - us-west-1
           - us-west-2
     with:
@@ -72,7 +72,7 @@ jobs:
       component-version: ${{needs.build-layer.outputs.JAVAAGENT_VERSION}}
       # architecture:
       runtimes: java8 java8.al2 java11 java17
-      release-group: dev
+      release-group: prod
       aws_region: ${{ matrix.aws_region }}
     secrets: inherit
 
