--- a/.github/workflows/release-layer-python.yml
+++ b/.github/workflows/release-layer-python.yml
@@ -25,13 +25,13 @@ jobs:
       - name: Build
         run: |
           cd python/src
-          PYTHON_SDK_VERSION=$(./run.sh -n opentelemetry-python-layer -b true 2>&1 > /dev/null | sed -n "s/opentelemetry-sdk==\(.*\)/\1/p")
+          PYTHON_SDK_VERSION=$(./build.sh 2>&1 > /dev/null | sed -n "s/opentelemetry-sdk==\(.*\)/\1/p")
         shell: bash
 
       - name: Show directory contents
         run: |
           ls -al
-        working-directory: python/src
+        working-directory: python/src/build
 
       - name: Save Python SDK Version
         id: save-python-sdk-version
@@ -42,7 +42,7 @@ jobs:
         name: Save assembled layer to build
         with:
           name: opentelemetry-python-layer.zip
-          path: python/src/opentelemetry-python-layer.zip
+          path: python/src/build/opentelemetry-python-layer.zip
 
   publish-layer:
     uses: ./.github/workflows/layer-publish.yml
