--- a/.github/workflows/ci-collector.yml
+++ b/.github/workflows/ci-collector.yml
@@ -3,14 +3,14 @@ name: "Continuous Build (Collector)"
 on:
   push:
     paths:
-      - 'collector/**'
-      - '.github/workflows/ci-collector.yml'
+      - "collector/**"
+      - ".github/workflows/ci-collector.yml"
     branches:
       - main
   pull_request:
     paths:
-      - 'collector/**'
-      - '.github/workflows/ci-collector.yml'
+      - "collector/**"
+      - ".github/workflows/ci-collector.yml"
     branches:
       - main
 
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '^1.20.8'
+          go-version: "^1.20.8"
       - uses: actions/cache@v4
         with:
           path: ~/go/pkg/mod
@@ -39,12 +39,12 @@ jobs:
     needs: [test]
     strategy:
       matrix:
-        architecture: [ amd64, arm64 ]
+        architecture: [amd64, arm64]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '^1.20.8'
+          go-version: "^1.20.8"
       - uses: actions/cache@v4
         with:
           path: ~/go/pkg/mod
