--- a/.github/workflows/layer-publish.yml
+++ b/.github/workflows/layer-publish.yml
@@ -48,6 +48,17 @@ jobs:
           else
             ARCH="x86_64 arm64"
           fi
+          echo "ARCH=$ARCH" >> $GITHUB_ENV
+
+          if [[ -n "${{ inputs.runtimes }}" ]]; then
+            RUNTIMES="--compatible-runtimes ${{ inputs.runtimes }}"
+          fi
+          echo "RUNTIMES=$RUNTIMES" >> $GITHUB_ENV
+
+          if [[ "${{ inputs.release-group }}" != "prod" ]]; then
+            LAYER_NAME=$LAYER_NAME-${{ inputs.release-group }}
+          fi
+
           LAYER_VERSION=$(echo "$GITHUB_REF_NAME" | sed -r 's/.*\/[^0-9\.]*//g')
           LAYER_VERSION_CLEANED=$(echo "$LAYER_VERSION" | sed -r 's/\./_/g')
 
