--- a/.github/workflows/pr-python.yml
+++ b/.github/workflows/pr-python.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        python: ['3.8', '3.9']
+        python: ['3.8', '3.9', '3.10']
 
     steps:
       - name: Checkout this repo
