--- a/python/src/template.yml
+++ b/python/src/template.yml
@@ -17,6 +17,7 @@ Resources:
         - python3.8
         - python3.9
         - python3.10
+        - python3.11
     Metadata:
       BuildMethod: makefile
   api:
