--- a/ruby/src/layer/Makefile
+++ b/ruby/src/layer/Makefile
@@ -1,5 +1,6 @@
 
 build-OTelLayer:
+	mkdir -p ruby
 	mkdir -p $(ARTIFACTS_DIR)/ruby/gems/3.2.0
 	bundler install --path ruby
 	cp -r ruby/ruby/3.2.0/* $(ARTIFACTS_DIR)/ruby/gems/3.2.0
