add dependent bot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -42,3 +42,11 @@ updates:
       opentelemetry-deps-python:
         patterns:
           - "opentelemetry-*"
+  - package-ecosystem: "bundler"
+    directory: "/ruby/src/layer"
+    schedule:
+      interval: "weekly"
+    groups:
+      opentelemetry-deps-python:
+        patterns:
+          - "opentelemetry-*"
