add sample handler as default runtime wrapper

--- a/ruby/sample-apps/template.yml
+++ b/ruby/sample-apps/template.yml
@@ -40,3 +40,6 @@ Resources:
             RestApiId: !Ref api
             Path: /
             Method: GET
+      Environment:
+        Variables:
+          AWS_LAMBDA_EXEC_WRAPPER: /opt/otel-handler
