--- a/ruby/src/layer/Makefile
+++ b/ruby/src/layer/Makefile
@@ -4,4 +4,5 @@ build-OTelLayer:
 	mkdir -p $(ARTIFACTS_DIR)/ruby/gems/3.2.0
 	bundler install --path ruby
 	cp -r ruby/ruby/3.2.0/* $(ARTIFACTS_DIR)/ruby/gems/3.2.0
+	cp otel-handler $(ARTIFACTS_DIR)/otel-handler
 	rm -rf $(ARTIFACTS_DIR)/ruby/gems/3.2.0/cache
