--- a/python/src/otel/otel_sdk/requirements.txt
+++ b/python/src/otel/otel_sdk/requirements.txt
@@ -1,3 +1,4 @@
+opentelemetry-sdk==1.21.0
 opentelemetry-exporter-otlp-proto-http==1.21.0
 opentelemetry-distro==0.42b0
 opentelemetry-instrumentation-aws-lambda==0.42b0
