--- a/collector/Makefile
+++ b/collector/Makefile
@@ -8,7 +8,13 @@ LAYER_NAME:=otel-collector
 VERSION=$(shell cat VERSION)
 GIT_SHA=$(shell git rev-parse HEAD)
 GOARCH ?= amd64
-ARCH ?= x86_64
+
+ifeq ($(GOARCH), amd64)
+ARCH=x86_64
+else
+ARCH=$(GOARCH)
+endif
+
 GOBUILD=GO111MODULE=on CGO_ENABLED=0 installsuffix=cgo go build -trimpath
 BUILD_INFO_IMPORT_PATH=main
 
