--- a/nodejs/sample-apps/aws-sdk/package.json
+++ b/nodejs/sample-apps/aws-sdk/package.json
@@ -8,8 +8,8 @@
   "repository": "open-telemetry/opentelemetry-lambda",
   "scripts": {
     "clean": "rimraf build/*",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
+    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts",
+    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts --fix",
     "precompile": "tsc --version",
     "prepare": "npm run compile",
     "compile": "tsc -p .",
@@ -26,7 +26,7 @@
   "author": "OpenTelemetry Authors",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   },
   "files": [
     "build/src/**/*.js",
@@ -42,8 +42,6 @@
     "copyfiles": "2.4.1",
     "rimraf": "5.0.5",
     "ts-node": "10.9.2",
-    "tslint-consistent-codestyle": "1.16.0",
-    "tslint-microsoft-contrib": "6.2.0",
     "typescript": "5.3.3"
   },
   "dependencies": {
