Adding ruby lambda layer (#918)
* add ruby lambda layer draft

* update zip_ruby_layer script for passing name

* revision

* revision and add more info on readme

* add github action to build ruby lambda layer

* use https instead of http for rubygems.org

* add dependent bot

* Update .github/dependabot.yml

Co-authored-by: Tristan Sloughter <t@crashfast.com>

* add sample handler as default runtime wrapper

* Update ruby/README.md

Co-authored-by: Tristan Sloughter <t@crashfast.com>

* Update ruby/README.md

Co-authored-by: Tristan Sloughter <t@crashfast.com>

* fix workflow

---------

Co-authored-by: Tristan Sloughter <t@crashfast.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -69,6 +69,14 @@ updates:
       opentelemetry-deps-python:
         patterns:
           - "opentelemetry-*"
+  - package-ecosystem: "bundler"
+    directory: "/ruby/src/layer"
+    schedule:
+      interval: "weekly"
+    groups:
+      opentelemetry-deps-ruby:
+        patterns:
+          - "opentelemetry-*"
       other:
         patterns:
           - "*"
