Add grouping for javascript
The individual dependabot prs for this are rather annoying.  Hopefully grouping them helps reduce noise.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -50,6 +50,10 @@ updates:
     directory: "/nodejs"
     schedule:
       interval: "weekly"
+    groups:
+      all:
+        patterns:
+          - "*"
   - package-ecosystem: "npm"
     directory: "/nodejs/packages/layer"
     schedule:
