--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -39,7 +39,7 @@
     "eslint-plugin-header": "3.1.1",
     "eslint-plugin-import": "2.29.1",
     "gts": "5.3.0",
-    "lerna": "^8.1.2",
+    "lerna": "7.4.2",
     "lerna-changelog": "2.2.0",
     "rimraf": "5.0.5",
     "typescript": "5.4.5"
