--- a/.github/workflows/ci-java.yml
+++ b/.github/workflows/ci-java.yml
@@ -12,17 +12,27 @@ on:
     branches:
       - main
 
+permissions:
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           distribution: corretto
-          java-version: '11'
-      - uses: burrunan/gradle-cache-action@v1.19
+          java-version: 17
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
         with:
-          remote-build-cache-proxy-enabled: false
-          arguments: build --stacktrace
-          build-root-directory: java
+          validate-wrappers: true
+          add-job-summary-as-pr-comment: on-failure # Valid values are 'never' (default), 'always', and 'on-failure'
+
+      - name: Execute Gradle build
+        run: |
+          cd java
+          ./gradlew build --scan --stacktrace
