--- a/.github/workflows/release-layer-java.yml
+++ b/.github/workflows/release-layer-java.yml
@@ -18,17 +18,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK for running Gradle
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
-          distribution: temurin
+          distribution: corretto
           java-version: 17
 
-      - uses: gradle/gradle-build-action@v3
-        name: Build Javaagent Layer
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
         with:
-          arguments: :layer-javaagent:assemble
-          build-root-directory: java
+          validate-wrappers: true
+
+      - name: Execute Gradle build
+        run: |
+          cd java
+          ./gradlew :layer-javaagent:assemble --scan --stacktrace
 
       - uses: actions/upload-artifact@v4
         name: Save assembled layer to build
