Run CI jobs on workflow changes
Also, fix java build failure: previous PR changed from 11 to 17, which apparently wasn't compatible with google-java-format 1.9.

--- a/.github/workflows/ci-java.yml
+++ b/.github/workflows/ci-java.yml
@@ -4,11 +4,13 @@ on:
   push:
     paths:
       - 'java/**'
+      - '.github/workflows/ci-java.yml'
     branches:
       - main
   pull_request:
     paths:
       - 'java/**'
+      - '.github/workflows/ci-java.yml'
     branches:
       - main
 
