Add sample app path in dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,6 +21,7 @@ updates:
       - "/collector/processor/coldstartprocessor"
       - "/collector/processor/decoupleprocessor"
       - "/collector/receiver/telemetryapireceiver"
+      - "/go/sample-apps/function"
     schedule:
       interval: "weekly"
     groups:
