--- a/ruby/src/layer/Gemfile
+++ b/ruby/src/layer/Gemfile
@@ -1,5 +1,5 @@
 source 'https://rubygems.org'
 
-gem 'opentelemetry-sdk'
-gem 'opentelemetry-exporter-otlp'
-gem 'opentelemetry-instrumentation-all'
+gem 'opentelemetry-sdk', '~> 1.4.1'
+gem 'opentelemetry-exporter-otlp', '~> 0.26.3'
+gem 'opentelemetry-instrumentation-aws_lambda', '~> 0.1.0'
