update ruby release action

--- a/.github/workflows/release-layer-ruby.yml
+++ b/.github/workflows/release-layer-ruby.yml
@@ -27,7 +27,7 @@ jobs:
           sudo apt-get update && sudo apt-get install wget unzip make -y
           wget https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip
           unzip aws-sam-cli-linux-x86_64.zip -d sam-installation
-          ./sam-installation/install --update
+          sudo ./sam-installation/install --update
 
       - name: Build
         id: save-ruby-sdk-version
