--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts --fix",
     "prepare": "npm run compile",
     "compile": "tsc -p .",
-    "postcompile": "copyfiles 'node_modules/**' build/workspace/nodejs && copyfiles -f 'scripts/*' build/workspace && copyfiles -f 'build/src/*' build/workspace && cd build/workspace && bestzip ../layer.zip *"
+    "postcompile": "copyfiles 'node_modules/**' build/workspace/nodejs && copyfiles -f 'scripts/*' build/workspace && copyfiles -f 'build/src/*' build/workspace && cd build/workspace && bestzip ../layer.zip *",
+    "test": "mocha"
   },
   "keywords": [
     "opentelemetry",
@@ -51,5 +52,12 @@
     "@opentelemetry/sdk-metrics": "^1.18.1",
     "@opentelemetry/sdk-trace-base": "^1.18.1",
     "@opentelemetry/sdk-trace-node": "^1.18.1"
+  },
+  "devDependencies": {
+    "@types/mocha": "^10.0.6",
+    "@types/sinon": "^17.0.3",
+    "mocha": "^10.4.0",
+    "sinon": "^18.0.0",
+    "ts-node": "^10.9.2"
   }
 }
