--- a/nodejs/packages/layer/package.json
+++ b/nodejs/packages/layer/package.json
@@ -49,6 +49,7 @@
     "@opentelemetry/propagator-aws-xray": "^1.25.1",
     "@opentelemetry/resource-detector-aws": "^1.5.2",
     "@opentelemetry/resources": "^1.25.1",
+    "@opentelemetry/sdk-logs": "^0.52.1",
     "@opentelemetry/sdk-metrics": "^1.25.1",
     "@opentelemetry/sdk-trace-base": "^1.25.1",
     "@opentelemetry/sdk-trace-node": "^1.25.1"
