--- a/.github/workflows/ci-nodejs.yml
+++ b/.github/workflows/ci-nodejs.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 18
       - uses: actions/cache@v4
         with:
           path: ~/.npm
@@ -29,4 +29,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - run: npm install
+        working-directory: nodejs
+      - run: npm run lint
+        working-directory: nodejs
+      - run: npm test
         working-directory: nodejs
