--- a/.github/workflows/release-layer-nodejs.yml
+++ b/.github/workflows/release-layer-nodejs.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 18
 
       - name: Build
         run: |
@@ -49,7 +49,7 @@ jobs:
     needs: build-layer
     strategy:
       matrix:
-        aws_region: 
+        aws_region:
           - ap-northeast-1
           - ap-northeast-2
           - ap-south-1
@@ -71,7 +71,7 @@ jobs:
       layer-name: opentelemetry-nodejs
       component-version: ${{needs.build-layer.outputs.NODEJS_VERSION}}
       # architecture:
-      runtimes: nodejs16.x nodejs18.x nodejs20.x
+      runtimes: nodejs18.x nodejs20.x
       release-group: prod
       aws_region: ${{ matrix.aws_region }}
     secrets: inherit
