--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,15 +10,16 @@
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "scripts": {
-    "clean": "lerna run clean",
-    "postinstall": "npm run bootstrap --verbose",
     "precompile": "tsc --version",
     "compile": "lerna run compile",
     "test": "lerna run test",
-    "bootstrap": "lerna bootstrap --no-ci",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint:fix"
   },
+  "workspaces": [
+    "packages/*",
+    "sample-apps/*"
+  ],
   "keywords": [
     "opentelemetry",
     "nodejs",
@@ -30,19 +31,19 @@
   "author": "OpenTelemetry Authors",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "aws-sdk": "2.1659.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
+    "aws-sdk": "2.1674.0",
     "bestzip": "2.2.1",
     "copyfiles": "2.4.1",
-    "eslint": "8.57.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-header": "3.1.1",
     "eslint-plugin-import": "2.29.1",
     "gts": "5.3.1",
-    "lerna": "^6.5.1",
+    "lerna": "^8.1.8",
     "lerna-changelog": "2.2.0",
     "rimraf": "6.0.1",
-    "typescript": "5.5.3"
+    "typescript": "5.5.4"
   },
   "changelog": {
     "labels": {
