build: fix release layer nodejs missing compile with new lerna

--- a/.github/workflows/release-layer-nodejs.yml
+++ b/.github/workflows/release-layer-nodejs.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Build
         run: |
           npm install
+          npm run compile
         working-directory: nodejs
 
       - name: Save Node SDK Version
