build: rename build step

--- a/.github/workflows/release-layer-nodejs.yml
+++ b/.github/workflows/release-layer-nodejs.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build
         run: |
           npm install
-          npm run compile
+          npm run build
         working-directory: nodejs
 
       - name: Save Node SDK Version
