--- a/.github/workflows/release-layer-ruby.yml
+++ b/.github/workflows/release-layer-ruby.yml
@@ -47,6 +47,8 @@ jobs:
       - name: Add Binary to Release
         run: |
             gh release upload ${{github.ref_name}} ruby/src/build/opentelemetry-ruby-layer.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish-layer:
     uses: ./.github/workflows/layer-publish.yml
