--- a/.github/workflows/release-layer-java.yml
+++ b/.github/workflows/release-layer-java.yml
@@ -46,6 +46,7 @@ jobs:
 
       - name: Add Binary to Release
         run: |
+          gh release create ${{github.ref_name}}
           gh release upload ${{github.ref_name}} java/layer-wrapper/build/distributions/opentelemetry-javawrapper-layer.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
