--- a/.github/workflows/release-layer-python.yml
+++ b/.github/workflows/release-layer-python.yml
@@ -54,7 +54,8 @@ jobs:
 
       - name: Add Binary to Release
         run: |
-            gh release upload ${{github.ref_name}} python/src/build/opentelemetry-python-layer.zip
+          gh release create ${{github.ref_name}}
+          gh release upload ${{github.ref_name}} python/src/build/opentelemetry-python-layer.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
