--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -35,6 +35,7 @@
     "aws-sdk": "2.1692.0",
     "bestzip": "2.2.1",
     "copyfiles": "2.4.1",
+    "esbuild": "0.24.0",
     "eslint": "^8.57.0",
     "eslint-plugin-header": "3.1.1",
     "eslint-plugin-import": "2.31.0",
